# excel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: release-draft-cli.yml  release-draft.yml
.github/workflows/: cli.yml  release.yml
benchmarks/: test-openpyxl.py  test-pandas-xlsxwriter.py  test-pandas.py  test-py-excel-rs.py  test-pyexcelerate.py  test-xlsxwriter.py
cli-excel-rs/: Cargo.toml
cli-excel-rs/src/: main.rs
crates/excel-rs-csv/: Cargo.toml
crates/excel-rs-csv/src/: lib.rs
crates/excel-rs-postgres/: Cargo.toml
crates/excel-rs-postgres/src/: client.rs  lib.rs  sql_impl.rs  ssl.rs
crates/excel-rs-xlsx/: Cargo.toml
crates/excel-rs-xlsx/src/: format.rs  lib.rs  sheet.rs  typed_sheet.rs  workbook.rs
py-excel-rs/: Cargo.toml  pyproject.toml
py-excel-rs/py_excel_rs/: __init__.py  df_to_xlsx.py  postgres.py
py-excel-rs/src/: lib.rs  postgres.rs  utils.rs
python/py_csv2xlsx_rs/: __init__.py  df_to_xlsx.py
python/py_excel_rs/: __init__.py  df_to_xlsx.py
src/: export_to_xlsx.rs  lib.rs  main.rs  ssl.rs
src/xlsx/: format.rs  mod.rs  sheet.rs  workbook.rs
