[package]
name = "excel-rs"
version = "0.4.1"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
debug = true
overflow-checks = false
debug-assertions = false

[dependencies]
csv = "1"
pyo3 = { version = "0.21", features = ["extension-module"] }
anyhow = "1.0.86"
zip = { version = "2.2.0", default-features = false, features = ["deflate-flate2", "deflate-zlib-ng"] }
numpy = "0.21"
postgres = "0.19.8"
chrono = "0.4.38"
postgres-protocol = "0.6.7"
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
postgres_money = { version = "0.4.0", features = ["sql"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
# openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "excel_rs"
crate-type = ["cdylib"]

# [dependencies.openssl-sys]
# version = "0.9"
# features = ["vendored"]