[workspace]
members = ["crates/*", "py-excel-rs"]
resolver = "2"

[workspace.package]
version = "0.5.1"
authors = ["Carl Voller"]
edition = "2021"
homepage = "https://github.com/carlvoller/excel-rs"
license = "MIT"
repository = "https://github.com/carlvoller/excel-rs"

[workspace.dependencies]
excel-rs-xlsx = { version = "0.5.1", path = "crates/excel-rs-xlsx", default-features = false }
excel-rs-csv = { version = "0.5.1", path = "crates/excel-rs-csv", default-features = false }
excel-rs-postgres = { version = "0.5.1", path = "crates/excel-rs-postgres", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
debug = true
overflow-checks = false
debug-assertions = false
