[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "py-excel-rs"
version = "0.4.0"
description = "Some performant utility functions to convert common data structures to XLSX"
dependencies = ["pandas", "numpy"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "python"
module-name = "py_excel_rs._excel_rs"